syntax = "proto3";

package product;

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductResponse);
  rpc ReserveInventory (InventoryRequest) returns (InventoryResponse);
  rpc ReleaseInventory (InventoryRequest) returns (InventoryResponse);
  rpc FinalizeInventory (InventoryRequest) returns (InventoryResponse);
}

message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  int32 availableQty = 3;
  int32 reservedQty = 4;
}

message InventoryRequest {
  string productId = 1;
  int32 quantity = 2;
}

message InventoryResponse {
  string message = 1;
  bool success = 2;
}
